# diplom

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  main.py  schemas.py  views.py
app/adapters/: docx.py  elasticsearch.py  embedding.py  gigachat_client.py  minio_client.py  orm.py  repository.py
app/domain/: model.py
app/entrypoints/: fastapi_app.py
app/service_layer/: services.py  unit_of_work.py
app/static/: script.js  style.css
app/templates/: chat.html
migrations/: env.py
migrations/versions/: f4ce202a33f6_init_tables.py
