[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["BurchinskiyVA <BurchinskiyVA@enco72.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
sqlalchemy = {extras = ["async"], version = "^2.0.39"}
elasticsearch = "^8.17.2"
gigachat = "^0.1.39.post1"
python-docx = "^1.1.2"
langchain = "^0.3.21"
sentence-transformers = "^3.4.1"
aiohttp = "^3.11.14"
minio = "^7.2.15"
python-multipart = "^0.0.20"
jinja2 = "^3.1.6"
asyncpg = "^0.30.0"
alembic = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
